# KissShock

./: .gitignore  CMakeLists.txt  README.md  compile_run.sh
assets/: map.txt  mero_colours.qoi  mero_head.qoi
samples/framebuffer_window/: compile_run.sh  main.cpp
samples/games/pong/: main.cpp
samples/qoiloader/: main.cpp
samples/simulator/: compile_run.sh  main.cpp  pong.hpp
scratch/aabb_test/: main.cpp
src/: engine.hpp  main.cpp  util.hpp
src/graphics/: bitmap.cpp  bitmap.hpp  config.hpp  framebuffer.cpp  framebuffer.hpp  pixel.hpp  renderer.hpp  sprite.hpp  spritedb.hpp  transforms.hpp  window.cpp  window.hpp
src/graphics/loaders/: qoi_loader.cpp  qoi_loader.hpp
src/physics/: pengine2d.hpp  pengine3d.hpp
src/simulator/: body.hpp  collision.cpp  collision.hpp  collision_handler.hpp  collision_tests.cpp  collision_tests.hpp  cr_table.cpp  cr_table.hpp  simulator.cpp  simulator.hpp
tests/simulator/: compile_run.sh  pong.hpp  resolution.cpp
unit_tests/: .gitignore  CMakeLists.txt
unit_tests/simulator/: collision.cpp  compile_run.sh  registration.cpp  test_body.cpp  test_body.hpp  tick.cpp
